# WDFoundation_OSS

./: .gitattributes  .gitmodules  .p4ignore  CMakeLists.txt  GenerateGDK.bat  Precompiled.7z  README.md  RunCMake.ps1  nsCMakeConfig.cmake
Code/Foundation/: Basics.h  CMakeLists.txt  FoundationInternal.h  FoundationPCH.cpp  FoundationPCH.h  UserConfig.h  ezEngine.natvis
Code/Foundation/Algorithm/: Comparer.h  HashHelperString.h  HashStream.h  HashableStruct.h  HashingUtils.h  Sorting.h
Code/Foundation/Application/: Application.h
Code/Foundation/Basics/: AllDefinesOff.h  Assert.cpp  Assert.h  Basics.cpp  IncludeAll.cpp  PreprocessorUtils.h
Code/Foundation/CodeUtils/: MathExpression.h  Preprocessor.h  TokenParseUtils.h  Tokenizer.h
Code/Foundation/Communication/: DataTransfer.h  Event.h  GlobalEvent.h  IpcChannel.h  IpcProcessMessageProtocol.h  Message.h  MessageQueue.h  RemoteInterface.h  RemoteInterfaceEnet.h  RemoteMessage.h  Telemetry.h
Code/Foundation/Configuration/: CVar.h  PlatformSubsystem.cpp  PlatformSubsystem.h  Plugin.h  Singleton.h  Startup.h  StaticPlatformSubSystem.h  StaticSubSystem.h  SubSystem.h
Code/Foundation/Containers/: ArrayBase.h  ArrayMap.h  Bitfield.h  Blob.h  Deque.h  DynamicArray.h  HashSet.h  HashTable.h  HybridArray.h  IdTable.h  List.h  Map.h  Set.h  SmallArray.h  StaticArray.h  StaticRingBuffer.h
Code/Foundation/IO/: ChunkStream.h  CompressedStreamZstd.h  DeduplicationReadContext.h  DeduplicationWriteContext.h  DependencyFile.h  DirectoryWatcher.h  FileEnums.h  JSONParser.h  JSONReader.h  JSONWriter.h  MemoryMappedFile.h  MemoryStream.h  OSFile.h  OpenDdlParser.h  OpenDdlReader.h  OpenDdlUtils.h  OpenDdlWriter.h  SerializationContext.h  Stream.h  StreamUtils.h  StringDeduplicationContext.h  TypeVersionContext.h
Code/Foundation/Logging/: ConsoleWriter.h  ETWWriter.h  HTMLWriter.h  Log.h  LogEntry.h  VisualStudioWriter.h
Code/Foundation/Math/: Angle.h  BoundingBox.h  BoundingBoxSphere.h  BoundingSphere.h  Color.h  Color16f.h  Color8UNorm.h  ColorScheme.h  Constants.h  CurveFunctions.h  Declarations.h  FixedPoint.h  Float16.h  Frustum.h  Intersection.h  Mat3.h  Mat4.h  Math.h  Plane.h  Quat.h  Random.h  Rational.h  Rect.h  Size.h  Transform.h  Vec2.h  Vec3.h  Vec4.h
Code/Foundation/Memory/: Allocator.h  AllocatorBase.h  AllocatorWrapper.h  (+11 more)
(+895 files in other folders)
